# Note some color schemes are deliberately not installed
# at present

install( FILES 
         BlackOnLightYellow.schema
         BlackOnRandomLight.colorscheme 
         BlackOnWhite.schema  	
         BlueOnBlack.colorscheme
         GreenOnBlack.colorscheme 
         WhiteOnBlack.schema  	
         Linux.colorscheme
         DarkPastels.colorscheme
         RedOnBlack.colorscheme
         Solarized.colorscheme
         DESTINATION 
         ${DATA_INSTALL_DIR}/konsole )
