# Note some color schemes are deliberately not installed
# at present

install( FILES
         BlackOnLightYellow.colorscheme
         BlackOnRandomLight.colorscheme
         BlackOnWhite.colorscheme
         BlueOnBlack.colorscheme
         GreenOnBlack.colorscheme
         WhiteOnBlack.colorscheme
         Linux.colorscheme
         DarkPastels.colorscheme
         RedOnBlack.colorscheme
         Solarized.colorscheme
         DESTINATION
         ${DATA_INSTALL_DIR}/konsole )
