# Note some color schemes are deliberately not installed
# at present

install( FILES 
#       BlackOnLightColor.schema 
         BlackOnLightYellow.schema 
         BlackOnWhite.schema  	
#        Example.Schema 
        GreenOnBlack.schema 
        WhiteOnBlack.schema  	
#        README.default.Schema 
#        syscolor.schema 
#         Linux.schema
         Linux.colorscheme 
#         XTerm.schema 
#         vim.schema    
#         DarkPicture.schema 
#         LightPicture.schema 
#         Transparent.schema 
#         GreenTint.schema    
#         Transparent_MC.schema 
#         GreenTint_MC.schema    
#         Transparent_lightbg.schema    
#         Transparent_darkbg.schema
#         README.Schema 
         DESTINATION 
         ${DATA_INSTALL_DIR}/konsole )
